[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player Files/Player.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Zero - Dash.WAV" type="AudioStream" id=2]
[ext_resource path="res://Sounds/Buster - Shot.WAV" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Foot Step/Zero - Walk-Jump.WAV" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Foot Step/Zero - Wall Jump.WAV" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Zero - Hit.WAV" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Splash.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Zero - Die.WAV" type="AudioStream" id=8]
[ext_resource path="res://Sounds/increase.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/SwitchCharacter.wav" type="AudioStream" id=10]
[ext_resource path="res://Character Sprites/ZeroSpriteAnim.tres" type="SpriteFrames" id=11]
[ext_resource path="res://Character Sprites/ZeroDash1.png" type="Texture" id=12]
[ext_resource path="res://ParticleEffects/Explosion.tscn" type="PackedScene" id=13]
[ext_resource path="res://MM2Font_Smaller.tres" type="DynamicFont" id=14]
[ext_resource path="res://Character Sprites/HPBar.png" type="Texture" id=15]
[ext_resource path="res://Player Files/mission start1.png" type="Texture" id=16]
[ext_resource path="res://Player Files/mission start2.png" type="Texture" id=17]
[ext_resource path="res://Player Files/mission start_EDITOR_ONLY.png" type="Texture" id=18]
[ext_resource path="res://Player Files/PauseScreenDemo.tscn" type="PackedScene" id=19]
[ext_resource path="res://Player Files/CameraController_v2.gd" type="Script" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 44 )

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite

var piece = preload(\"res://Character Sprites/hp_piece.png\")
var curHP = 0

func _draw():
	for i in range(curHP):
		draw_texture(piece,Vector2(-4,23+2*-i))
		
func updateHP(newHP):
	curHP = newHP
	update()"

[sub_resource type="GDScript" id=3]
script/source = "extends Node2D
export (bool) var playSoundOnAnimationStart;


func list_files_in_directory(path):
	var files = []
	var dir = Directory.new()
	dir.open(path)
	dir.list_dir_begin()

	while true:
		var file = dir.get_next()
		if file == \"\":
			break
		elif !file.begins_with(\".\") and !file.ends_with(\".import\"):
			files.append(file)
	return files

func _ready():
	var tex1 = $MissionTex
	var tex2 = $StartTex
	var tex1width = tex1.texture.get_width()
	var tex2width = tex2.texture.get_width()
	var texVPos = 720/2 - tex1.texture.get_height() / 2
	#var totalWidth = tex1width + tex2width
	#TODO: change 720/2 to screen height
	#tex1.position = Vector2(-tex1width,720/2);
	var tween = $Tween
	tween.interpolate_property(tex1, \"position\",
		Vector2(-tex1width,texVPos), Vector2(1280/2-tex1width, texVPos), 1,
		Tween.TRANS_QUAD, Tween.EASE_OUT)
	tween.start()
	if playSoundOnAnimationStart:
		#var files = list_files_in_directory(\"res://Sounds/Announcer/Mission Start/\")
		var files = [\"Face it Striaght.wav\", 
			\"Go For Broke.wav\", 
			\"GoForItMan.wav\", 
			\"ItAllDependsOnYourSkill.wav\", 
			\"ItsShowtime.wav\", 
			\"LetsParty.wav\"]
		randomize() #inits randi()
		var sound = randi()%files.size()
		print(files[sound])
		var audio = load(\"res://Sounds/Announcer/Mission Start/\"+files[sound])
		$AudioStreamPlayer.stream = audio;
		$AudioStreamPlayer.play();
	
	var tween2 = $Tween2
	#tween2.connect(\"tween_completed\",self,\"aaaa\")
	tween2.interpolate_property(tex2, \"position\",
		Vector2(1280+tex1width-tex2width,texVPos), Vector2(1280/2, texVPos), 1,
		Tween.TRANS_QUAD, Tween.EASE_OUT)
	tween2.start()
	
	yield(tween2,\"tween_completed\")
	#Here is the part where it would flash white, but I don't know how to add glow yet
	if !playSoundOnAnimationStart:

		$AudioStreamPlayer.play()
	
	tween.interpolate_property(tex1,\"modulate\",
		Color(1,1,1,1), Color(1,1,1,0), 1,
		Tween.TRANS_LINEAR, Tween.EASE_IN_OUT)
	tween.start()
	
	tween2.interpolate_property(tex2,\"modulate\",
		Color(1,1,1,1), Color(1,1,1,0), 1,
		Tween.TRANS_LINEAR, Tween.EASE_IN_OUT)
	tween2.start()
	
	#lol
	yield(tween2,\"tween_completed\")
	tex1.visible = false
	tex2.visible = false
#func aaaa(a, b):
#	$AudioStreamPlayer.play()
#	tween2.disconnect(\"tween_completed\",self,\"aaaa\") #we don't want an endless loop
	
"

[node name="Player" type="KinematicBody2D"]
position = Vector2( 900, 0 )
script = ExtResource( 1 )
run_speed = 300
jump_speed = -800
dash_multiplier = 2
gravity = 2000

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Player/Enemies"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Player/Enemies"

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -7.0
bus = "Player/Enemies"

[node name="WallJumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Player/Enemies"

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Player/Enemies"

[node name="SplashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Player/Enemies"

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Player/Enemies"

[node name="HealSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Player/Enemies"

[node name="ChangeCharacterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = ExtResource( 11 )
animation = "WalkLoop"
frame = 7

[node name="AfterImage1" type="Sprite" parent="Sprite"]
modulate = Color( 1, 0, 0, 0.588235 )
show_behind_parent = true
texture = ExtResource( 12 )
offset = Vector2( -15, 0 )

[node name="AfterImage2" type="Sprite" parent="Sprite"]
modulate = Color( 1, 0, 0, 0.509804 )
show_behind_parent = true
texture = ExtResource( 12 )
offset = Vector2( -30, 0 )

[node name="AfterImage3" type="Sprite" parent="Sprite"]
modulate = Color( 1, 0, 0, 0.392157 )
show_behind_parent = true
texture = ExtResource( 12 )
offset = Vector2( -45, 0 )

[node name="Explosion" parent="." instance=ExtResource( 13 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CameraBounds" type="Polygon2D" parent="CanvasLayer"]
visible = false
color = Color( 0.96875, 1, 0, 0.325961 )
polygon = PoolVector2Array( 500, 200, 780, 200, 780, 520, 500, 520 )

[node name="StateInfo" type="Label" parent="CanvasLayer"]
margin_left = 99.0
margin_top = 118.0
margin_right = 900.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "PlayerState debug"

[node name="CameraInfo" type="Label" parent="CanvasLayer"]
margin_left = 104.0
margin_top = 211.0
margin_right = 905.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "camera debug"

[node name="StateVelocity" type="Label" parent="CanvasLayer"]
margin_left = 101.0
margin_top = 21.0
margin_right = 739.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "Velocity debug"

[node name="StateTile" type="Label" parent="CanvasLayer"]
margin_left = 99.0
margin_top = 88.0
margin_right = 737.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "Tile Debug"

[node name="StatePosition" type="Label" parent="CanvasLayer"]
margin_left = 101.0
margin_top = 53.0
margin_right = 739.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "Position Debug"

[node name="FreeRoam" type="Label" parent="CanvasLayer"]
margin_left = 617.0
margin_top = 15.0
margin_right = 1255.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "Free Roam"
align = 2

[node name="PositionOnScreen" type="Label" parent="CanvasLayer"]
margin_left = 103.0
margin_top = 243.0
margin_right = 679.0
margin_bottom = 278.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
text = "Onscreen pos"

[node name="bar" type="Sprite" parent="CanvasLayer"]
position = Vector2( 46.7274, 340.658 )
scale = Vector2( 4, 4 )
texture = ExtResource( 15 )
script = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
script = SubResource( 3 )
playSoundOnAnimationStart = true

[node name="MissionTex" type="Sprite" parent="CanvasLayer/Node2D"]
position = Vector2( 320, 360 )
texture = ExtResource( 16 )
centered = false
region_rect = Rect2( 320, 180, 640, 360 )

[node name="StartTex" type="Sprite" parent="CanvasLayer/Node2D"]
position = Vector2( 960, 360 )
texture = ExtResource( 17 )
centered = false

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Node2D"]
visible = false
modulate = Color( 0.21875, 1, 0, 1 )
texture = ExtResource( 18 )
offset = Vector2( 640, 360 )

[node name="Tween" type="Tween" parent="CanvasLayer/Node2D"]

[node name="Tween2" type="Tween" parent="CanvasLayer/Node2D"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/Node2D"]

[node name="Fadeout" type="Polygon2D" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 720 )

[node name="Fadeout_Tween" type="Tween" parent="CanvasLayer"]

[node name="bullet_shoot" type="Position2D" parent="."]
position = Vector2( -900, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
drag_margin_top = 0.3
drag_margin_bottom = 0.3
script = ExtResource( 21 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CeilingCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -20 )

[node name="GroundCheck" type="RayCast2D" parent="."]
enabled = true

[node name="EventCheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 44 )
collision_mask = 4

[node name="HealAnimation" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
scale = Vector2( 2, 2 )

[node name="MPRestoreAnimation" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
scale = Vector2( 2, 2 )

[node name="PauseScreen" parent="." instance=ExtResource( 19 )]
